Fixed overflow issue

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,7 +1,8 @@
 body {
   margin: 0px;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
+  padding: 0;
+  min-width: 800px;
 }
 
 ul {
@@ -66,9 +67,18 @@ select {
 }
 
 .nav {
+  height: 70px; /* notice this value */
+  width: 100%;
   font-size: 1.75em;
-  vertical-align: middle;
-  z-index: 1;
+}
+
+.myScrollableDiv {
+  position: fixed;
+  top: 74px; /* same height as navbar */
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
 }
 
 .container {
@@ -85,7 +95,6 @@ select {
 }
 
 .centered {
-  /* position: fixed; */
   position: absolute;
   top: 50%;
   left: 50%;
